--- a/index.html
+++ b/index.html
@@ -1,284 +1,144 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LCDR LIVE DATA</title>
+  <meta charset="UTF-8">
+  <title>Combined Stats</title>
   <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: Arial, sans-serif;
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 10%;
-      background-color: #111;
-      flex-wrap: wrap;
-    }
-
-    .header h1 {
-      margin: 0;
-      color: #008080;
-      font-size: 24px;
-    }
-
-    .controls {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 10px;
-    }
-
-    .date-info {
-      color: #008080;
-      font-size: 20px;
-    }
-
-    select {
-      padding: 6px 10px;
-      font-size: 16px;
-    }
-
-    .table-container {
-      width: 80%;
-      margin: 24px auto;
-    }
-
-    .table-button {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      background-color: #008080;
-      color: #000;
-      font-size: 18px;
-      font-weight: bold;
-      border: none;
-      border-radius: 10px 10px 0 0;
-      cursor: pointer;
-      text-align: left;
-      padding-left: 20px;
-      margin-bottom: -1px;
-    }
-
     table {
-      width: 100%;
       border-collapse: collapse;
-      background-color: #555;
-      border-radius: 0 0 10px 10px;
+      width: 100%;
     }
-
-    table, th, td {
-      border: 1px solid #fff;
-    }
-
     th, td {
-      padding: 10px;
-      text-align: center;
-    }
-
-    th {
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    td {
-      font-size: 16px;
-    }
-
-    .total-row {
-      font-weight: bold;
-      background-color: #333;
-      color: #00ffcc;
+      border: 1px solid #ccc;
+      padding: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h1>LCDR LIVE DATA 2025</h1>
-    <div class="controls">
-      <label for="month-select" class="date-info">Wybierz miesiąc:</label>
-      <select id="month-select"></select>
-    </div>
+  <h1>Combined Stats</h1>
+  <div>
+    <label for="month">Month:</label>
+    <select id="month">
+      <option value="1">January</option>
+      <option value="2">February</option>
+      <option value="3">March</option>
+      <option value="4">April</option>
+      <option value="5">May</option>
+      <option value="6">June</option>
+      <option value="7">July</option>
+      <option value="8">August</option>
+      <option value="9">September</option>
+      <option value="10">October</option>
+      <option value="11">November</option>
+      <option value="12">December</option>
+    </select>
+
+    <label for="year">Year:</label>
+    <input type="number" id="year" value="2024">
+
+    <button id="loadButton">Load Stats</button>
   </div>
 
-  <div class="table-container">
-    <button class="table-button">Podsumowanie FI Station</button>
-    <table id="combined-table">
-      <thead>
-        <tr>
-          <th>NAME</th>
-          <th>NDF</th>
-          <th>OK</th>
-          <th>WAITING</th>
-          <th>SCRAP TTL</th>
-          <th>SCRAP PNLA</th>
-          <th>SUMA CAŁKOWITA</th>
-          <th>DNI OBECNOŚCI</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
+  <table id="combinedTable">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Calls</th>
+        <th>SMS</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
-    const apiKey = 'AIzaSyCP7tzYiGwIZ6cymLAlv_9QgPIEshnRgqI';
-    const sheetId = '10W03bvKlVFlIUcxsHkzP_v_13gtnYRBmnrrO0ujB1bU';
-    const sheetURL = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/`;
+    const spreadsheetId = '1jNzpK3QMu-ywJ_UhVu9rFC0ubqjUpkK1i2_4EVoyESE';
+    const apiKey = 'AIzaSyA-rX2G_gvYlDRjeEphqLwYfKQtLhrfSQU';
 
     async function getData(sheetName) {
-      try {
-        const response = await fetch(`${sheetURL}${sheetName}?key=${apiKey}`);
-        const data = await response.json();
-        return data.values;
-      } catch (err) {
-        console.error(`Błąd pobierania danych: ${err}`);
-        return [];
-      }
+      const range = `'${sheetName}'!A1:Z1000`;
+      const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${encodeURIComponent(range)}?key=${apiKey}`;
+      const response = await fetch(url);
+      const data = await response.json();
+      return data.values || [];
     }
 
-    async function fetchData() {
-      const sheet1Data = await getData('FI Station KOVALCHYK Y.');
-      const sheet2Data = await getData('FI Station 2 ULANOVYCH.R');
-      const combined = [...sheet1Data.slice(1), ...sheet2Data.slice(1)];
-      return combined.map(row => ({
-        name: row[5],
-        status: row[4],
-        date: row[0]
-      }));
-    }
-
-    function calculateStats(data) {
+    function calculateCombinedStats(data) {
       const stats = {};
-      const presenceMap = {};
 
-      data.forEach(({ name, status, date }) => {
+      data.forEach(record => {
+        const { name, status } = record;
+        if (!name || !status) return;
+
         if (!stats[name]) {
-          stats[name] = {
-            NDF: 0,
-            OK: 0,
-            WAITING: 0,
-            'SCRAP TTL': 0,
-            'SCRAP PNLA': 0,
-            total: 0,
-            presentDays: 0
-          };
-          presenceMap[name] = new Set();
+          stats[name] = { calls: 0, sms: 0 };
         }
 
-        if (status === 'NDF') stats[name].NDF++;
-        if (status === 'OK') stats[name].OK++;
-        if (status === 'WAITING') stats[name].WAITING++;
-        if (status === 'SCRAP TTL') stats[name]['SCRAP TTL']++;
-        if (status === 'SCRAP PNLA') stats[name]['SCRAP PNLA']++;
-        stats[name].total++;
-
-        const dayOnly = date?.split(' ')[0];
-        if (dayOnly) presenceMap[name].add(dayOnly);
+        if (status.toLowerCase() === 'дзвінок' || status.toLowerCase() === 'дзвінок-вдало') {
+          stats[name].calls += 1;
+        } else if (status.toLowerCase() === 'смс') {
+          stats[name].sms += 1;
+        }
       });
-
-      for (const name in presenceMap) {
-        stats[name].presentDays = presenceMap[name].size;
-      }
 
       return stats;
     }
 
     function displayCombinedStats(stats) {
-      const tbody = document.querySelector('#combined-table tbody');
+      const tbody = document.querySelector('#combinedTable tbody');
       tbody.innerHTML = '';
 
-      const totals = {
-        NDF: 0,
-        OK: 0,
-        WAITING: 0,
-        'SCRAP TTL': 0,
-        'SCRAP PNLA': 0,
-        total: 0
-      };
-
-      const sortedStats = Object.entries(stats).sort(([, a], [, b]) => b.OK - a.OK);
-
-      sortedStats.forEach(([name, data]) => {
+      for (const name in stats) {
         const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${name}</td>
-          <td>${data.NDF}</td>
-          <td>${data.OK}</td>
-          <td>${data.WAITING}</td>
-          <td>${data['SCRAP TTL']}</td>
-          <td>${data['SCRAP PNLA']}</td>
-          <td>${data.total}</td>
-          <td>${data.presentDays}</td>
-        `;
+        const nameCell = document.createElement('td');
+        const callsCell = document.createElement('td');
+        const smsCell = document.createElement('td');
+
+        nameCell.textContent = name;
+        callsCell.textContent = stats[name].calls;
+        smsCell.textContent = stats[name].sms;
+
+        row.appendChild(nameCell);
+        row.appendChild(callsCell);
+        row.appendChild(smsCell);
         tbody.appendChild(row);
-
-        totals.NDF += data.NDF;
-        totals.OK += data.OK;
-        totals.WAITING += data.WAITING;
-        totals['SCRAP TTL'] += data['SCRAP TTL'];
-        totals['SCRAP PNLA'] += data['SCRAP PNLA'];
-        totals.total += data.total;
-      });
-
-      const totalRow = document.createElement('tr');
-      totalRow.className = 'total-row';
-      totalRow.innerHTML = `
-        <td>SUMA</td>
-        <td>${totals.NDF}</td>
-        <td>${totals.OK}</td>
-        <td>${totals.WAITING}</td>
-        <td>${totals['SCRAP TTL']}</td>
-        <td>${totals['SCRAP PNLA']}</td>
-        <td>${totals.total}</td>
-        <td>-</td>
-      `;
-      tbody.appendChild(totalRow);
-    }
-
-    function populateMonthSelect() {
-      const select = document.getElementById('month-select');
-      const now = new Date();
-      const monthsToShow = 12;
-
-      for (let i = 0; i < monthsToShow; i++) {
-        const date = new Date(now.getFullYear(), now.getMonth() - i, 1);
-        const value = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}`;
-        const label = date.toLocaleDateString('pl-PL', { month: 'long', year: 'numeric' });
-        const capitalizedLabel = label.charAt(0).toUpperCase() + label.slice(1);
-        const option = new Option(capitalizedLabel, value);
-        select.appendChild(option);
       }
     }
 
-    async function updateStats() {
-      const selectedMonth = document.getElementById('month-select').value;
-      const [year, month] = selectedMonth.split('-').map(Number);
+    document.getElementById('loadButton').addEventListener('click', async () => {
+      const month = parseInt(document.getElementById('month').value);
+      const year = parseInt(document.getElementById('year').value);
 
-      const combinedData = await fetchData();
+      const sheet1Data = await getData('FI Station KOVALCHYK Y.');
+      const sheet2Data = await getData('FI Station 2 ULANOVYCH.R');
+
+      console.log('Sheet1 Header:', sheet1Data[0]);
+      console.log('Sheet1 First Row:', sheet1Data[1]);
+      console.log('Sheet2 Header:', sheet2Data[0]);
+      console.log('Sheet2 First Row:', sheet2Data[1]);
+
+      const combined = [...sheet1Data.slice(1), ...sheet2Data.slice(1)];
+
+      // Предположим: дата = A (0), статус = E (4), имя = F (5)
+      const combinedData = combined.map(row => ({
+        date: row[0] || '',
+        status: row[4] || '',
+        name: row[5] || ''
+      }));
 
       const filtered = combinedData.filter(record => {
-        const dateStr = record.date?.split(' ')[0];
-        if (!dateStr) return false;
-
+        if (!record.date || !record.name) return false;
+        const dateStr = record.date.split(' ')[0];
         const date = new Date(dateStr);
         return date.getFullYear() === year && date.getMonth() + 1 === month;
       });
 
-      const stats = calculateStats(filtered);
+      console.log('Filtered Records:', filtered);
+
+      const stats = calculateCombinedStats(filtered);
+      console.log('Final Stats:', stats);
+
       displayCombinedStats(stats);
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      populateMonthSelect();
-      document.getElementById('month-select').addEventListener('change', updateStats);
-      updateStats();
     });
-
-    setInterval(updateStats, 5000);
   </script>
 </body>
 </html>
