--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
     '750': 75,
     '700': 70,
     '650': 65,
+    '580': 58,
+    '585': 58,
     '550': 55,
     '500': 50,
     '490': 50,
@@ -302,7 +304,7 @@
   }
 
   // Обновленный массив диагоналей без 49, 42 и 34
-  const diagonals = [86, 85, 75, 70, 65, 55, 50, 43, 32, 27, 24];
+  const diagonals = [86, 85, 75, 70, 65, 58, 55, 50, 43, 32, 27, 24];
 
   function populateMonthSelect() {
     const select = document.getElementById('month-select');
